Disable cover fetching action for tracks not in the collection

BUG: 287604
FIXED-IN: 2.5