src/covermanager/CoverFoundDialog.cpp
@@ -372,7 +372,14 @@ void CoverFoundDialog::saveAs()
     if( !item->hasBigPix() && !fetchBigPix() )
         return;
 
-    KFileDialog dlg( m_album->tracks().first()->playableUrl().directory(), QString(), this );
+    Meta::TrackList tracks = m_album->tracks();
+    if( tracks.isEmpty() )
+    {
+        warning() << "no tracks associated with album" << m_album->name();
+        return;
+    }
+
+    KFileDialog dlg( tracks.first()->playableUrl().directory(), QString(), this );
     dlg.setCaption( i18n("Cover Image Save Location") );
     dlg.setMode( KFile::File | KFile::LocalOnly );
     dlg.setOperationMode( KFileDialog::Saving );
